- Partial support for Arabic language [will be fully supported soon.]. - Theme now applies to setting. - Cleaned some of the code.  :p

--- a/src/sample/res/config.properties
+++ b/src/sample/res/config.properties
@@ -1,7 +1,7 @@
-#Sun May 15 18:38:06 AST 2016
-Language=en
+#Mon May 16 15:03:22 AST 2016
+Language=ar
 GMTOffset=GMT+3
-Theme=Light
+Theme=Dark
 TimeFormat=hh\:mm\:ss aa
 DateFormat=MMM dd, yyyy
-LastSelectedNote=0
+LastSelectedNote=3
